# tiramisu-fw-ng

./: .gitignore  Cargo.toml  LICENSE  analyze.py  justfile  memory.x  tiramisu-fw-ng.code-workspace
.cargo/: config.toml
espresso/: Cargo.toml
espresso/src/: main.rs
icd/: Cargo.toml
icd/src/: lib.rs
mascarpone/: Cargo.toml  Embed.toml  memory.x
mascarpone/.cargo/: config.toml
mascarpone/src/: app.rs  handlers.rs  main.rs
src/: app.rs  handlers.rs  main.rs
